kubernetes/apps/flux-system/flux-operator/networkpolicys/flux-operator/flux-system-flux-operator-allow-eg-to-coredns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flux-system-flux-operator-allow-eg-to-coredns
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: flux-operator
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: coredns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
