kubernetes/apps/flux-system/flux-operator/networkpolicys/flux-operator/flux-system-flux-operator-allow-eg-to-k8s-api.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-system-flux-operator-allow-eg-to-k8s-api
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: flux-operator
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
