kubernetes/apps/flux-system/flux-operator/networkpolicys/flux-operator/flux-system-flux-operator-allow-eg-to-world.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-system-flux-operator-allow-eg-to-world
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: flux-operator
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
